--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -7,6 +7,19 @@
 <p>
 <a href ='{{url_for('newBook',bookcategory_id=bookcategory.id)}}'> 	Add a New Book in this category  </a>
 </p>
+
+<!--MESSAGE FLASHING EXAMPLE -->
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+
+<ul>
+{% for message in messages %}
+  <li><strong>{{message}}</strong></li>
+  {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
+
 {% for i in items%}
 
 <div>
