--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,8 +1,19 @@
 <html>
+<head>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+</head>
 
+	
 <body>
+	<div class = 'pane'>
+		<div class = 'header'>
+		<h1>{{bookcategory.name}}</h1>
+	</div>
 
-<h1>{{bookcategory.name}}</h1>
+
+
+
+
 
 <p>
 <a href ='{{url_for('newBook',bookcategory_id=bookcategory.id)}}'> 	Add a New Book in this category  </a>
