--- a/templates/deletebook.html
+++ b/templates/deletebook.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Deleting a Book</title>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
 <h2> Are you sure you want to delete {{item.name}}</h2>
