--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 	<script src = "//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
 	</script>
 
-	<script src="//apis.google.com/js/platform.js?onload=start" async defer>
+	<script src="//apis.google.com/js/platform.js?onload=start">
 	</script>
 	</head>
 
@@ -24,6 +24,42 @@
             data-approvalprompt="force">
           </span>
         </div>
+        <div id = "result"></div>
+        <script>
+        function signInCallback(authResult) {
+        	if (authResult['code'])  {
+
+
+        		// Hide the sign-in button now that the user is authorized
+        		$('#signinButton').attr('style','display: none');
+
+        		// Send the one-time-use code to the server, if the server responds, write a 'loginsuccessful' message to the web page and then redirect//
+        		$.ajax({
+        			type: 'POST' ,
+        			url: '/gconnect?state={{STATE}}',
+        			processData: false,
+        			data: authResult['code'],
+        			contentType: 'application/octet-stream; charset=utf-8' ,
+        			success: function(result) {
+        				//Handle or verify the server response if necessary.
+        				if (result) {
+        					$('#result').html('Login Successful!</br>'+result+ '</br>Redirecting...')
+        				setTimeout(function() {
+        					window.location.href   = "/restaurant";
+        				}, 4000);
+
+        			} else if (authResult['error']) {
+        		console.log('There was an error: ' + authResult['error']);
+        	} else {
+        		$('#result').html('Failed to make a server-side call. Check your configuration and console.');
+        	}
+
+   	}
+      
+  	}); } }
+
+        </script>
+        
 
     <!--END GOOGLE PLUS SIGN IN BUTTON -->
 
