--- a/templates/login.html
+++ b/templates/login.html
@@ -45,7 +45,7 @@
         				if (result) {
         					$('#result').html('Login Successful!</br>'+result+ '</br>Redirecting...')
         				setTimeout(function() {
-        					window.location.href   = "/cataloghome/1";
+        					window.location.href   = "/cataloghome";
         				}, 4000);
 
         			} else if (authResult['error']) {
