--- a/templates/home.html
+++ b/templates/home.html
@@ -1,26 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-	</head>
-	<body>
-	<div class = "container">
-		
+{% extends "layout.html" %}
+{% block title %} Catalog Home {% endblock title %}
+{% block body %}
+    <body>
+    <div class = "pane">
+    <h2> Book Catalog Homepage </h2>
 
-	<div class="row top-menu">
-		<div class="col-md-10"></div>
-		<div class="col-md-2 text-right">
-					</div>
-	</div>
-	<div class="row divider blue">
-		<div class="col-md-4"></div>
-	</div>
-	
-		
-
-			<h1>Book Catalog App by Saif</h1>
 			<p></p>
 			<p></p>
 
@@ -29,11 +13,11 @@
 			<p></p>
 			<p></p>
 	<div class = "login">
-		<div class = "col-md-12">	
-			<form action = "login.html">
+			
+			<form action ="{{url_for('showLogin')}}" method = 'GET'>
 			<input type = "button" value = "LOGIN">
 			</form>
-		</div>
+		
 	</div>
 
 <div class = 'flash'>
@@ -69,5 +53,7 @@
 
 
 </div>
+
+{% endblock body %}
 </body>
 </html>
