Solved Login button issue in homepage!

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,9 @@
 			<p></p>
 	<div class = "login">
 			
-			<form action ="{{url_for('showLogin')}}" method = 'GET'>
-			<input type = "button" value = "LOGIN">
+			<form action ="{{url_for('showLogin')}}">
+
+			<input type = "submit" value = "LOGIN">
 			</form>
 		
 	</div>
