--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,10 +1,9 @@
-<html>
-<head>
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-</head>
+{% extends 'layout.html'  %}
 
-	
+{% block title%} Category Page {% endblock title  %}
 <body>
+	{% block body %}
+
 	<div class = 'pane'>
 		<div class = 'header'>
 		<h1>{{bookcategory.name}}</h1>
@@ -49,6 +48,8 @@
 </div>
 
 {% endfor %}
+
+{% endblock body %}
 </body>
 
 </html>
