--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -14,9 +14,8 @@
 
 
 
-<p>
-<a href ='{{url_for('newBook',bookcategory_id=bookcategory.id)}}'> 	Add a New Book in this category  </a>
-</p>
+
+<h2><a href ='{{url_for('newBook',bookcategory_id=bookcategory.id)}}'> 	Add a New Book in this category  </a></h2>
 
 <!--MESSAGE FLASHING EXAMPLE -->
 {% with messages = get_flashed_messages() %}
@@ -30,20 +29,22 @@
 {% endif %}
 {% endwith %}
 
-{% for i in items%}
+{% for i in items %}
 
 <div>
 
-<p>{{i.name}}</p>
+<p>Name:{{i.name}}</p>
 
-<p>{{i.author}}</p>
+<p>Author:{{i.author}}</p>
 
-<p> {{i.description}} </p>
+<p>Description: {{i.description}} </p>
 
-<p> {{i.reviews}}  </p>
+<p>Review: {{i.reviews}}  </p>
 
 <a href ='{{url_for('editBook',bookcategory_id=bookcategory.id,id=i.id)}}'> 	Edit   </a> &emsp;<a href='{{url_for('deleteBook',bookcategory_id=bookcategory.id,id=i.id)}}'> Delete</a>
-
+<br />
+<br />
+<br />
 
 </div>
 
