--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+		{% block header %}  {% endblock header%}
 	</head>
 	<title>{% block title %} {% endblock title %}</title>
 
