--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,56 +1,31 @@
-{% extends 'layout.html'  %}
-
-{% block title%} Category Page {% endblock title  %}
-<body>
-	{% block body %}
-
-	<div class = 'pane'>
-		<div class = 'header'>
-		<h1>{{bookcategory.name}}</h1>
-	</div>
-
-
-
-
-
-
-
-<h2><a href ='{{url_for('newBook',bookcategory_id=bookcategory.id)}}'> 	Add a New Book in this category  </a></h2>
-
-<!--MESSAGE FLASHING EXAMPLE -->
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-
-<ul>
-{% for message in messages %}
-  <li><strong>{{message}}</strong></li>
-  {% endfor %}
-</ul>
-{% endif %}
-{% endwith %}
-
-{% for i in items %}
-
-<div>
-
-<p>Name:{{i.name}}</p>
-
-<p>Author:{{i.author}}</p>
-
-<p>Description: {{i.description}} </p>
-
-<p>Review: {{i.reviews}}  </p>
-
-<a href ='{{url_for('editBook',bookcategory_id=bookcategory.id,id=i.id)}}'> 	Edit   </a> &emsp;<a href='{{url_for('deleteBook',bookcategory_id=bookcategory.id,id=i.id)}}'> Delete</a>
-<br />
-<br />
-<br />
-
+{% extends 'layout.html' %} 
+{% block title%} Category Page {% endblock title %}
+{% block body %}
+<div class='pane'>
+  <div class='header'>
+    <h1>{{bookcategory.name}}</h1>
+  </div>
+  <h2><a href='{{url_for('>Add a New Book in this category</a></h2>
+           <!--MESSAGE FLASHING EXAMPLE -->
+  {% with messages = get_flashed_messages() %} {% if messages %}
+  <ul>
+    <li style="list-style: none">{% for message in messages %}</li>
+    <li> <strong>{{message}}</strong></li>
+    <li style="list-style: none">{% endfor %}</li>
+  </ul>
+  {% endif %} {% endwith %} 
+  {% for i in items %}
+  <div>
+    <p>Name:{{i.name}}</p>
+    <p>Author:{{i.author}}</p>
+    <p>Description: {{i.description}}</p>
+    <p>Review: {{i.reviews}}</p>
+    <a href='{{url_for('>Edit</a> &emsp; <a href=
+    '{{url_for('>Delete</a>
+    <br />
+    <br />
+    <br />
+  </div>
+  {% endfor %} 
+  {% endblock body %}
 </div>
-
-{% endfor %}
-
-{% endblock body %}
-</body>
-
-</html>
