--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -1,40 +1,28 @@
-<html>
-<head>
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-</head>
-<body>
-
-
-<form action= "{{url_for('editBook', bookcategory_id = bookcategory_id, id=item.id)}}" method = 'POST'>
-
-<p>Name:</p>
-<input type = 'text' size='30' name = 'name' placeholder = '{{item.name}}'>
-
-<p>Author:</p>
-<input type = 'text' size='30' name = 'author' placeholder = '{{item.author}}'>
-
-<p>Description:</p>
-<input type = 'text' size='30' name = 'description' placeholder = '{{item.description}}'>
-
-<p>Reviews: </p>
-<input  type = 'text' size= '30' name = 'reviews' placeholder = '{{item.reviews}}'>
-
-<p><input type = 'submit' value = 'Edit'> </p>
-
-<p> <a href="{{url_for('cataloghome',bookcategory_id=bookcategory_id)}}">Cancel</a>
-
-</form>
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
+{% extends "layout.html" %}
+{% block title %} Edit a Book {% endblock title %}
+{% block body%}
+<div class = 'pane'>
+  <div class = 'flash'>
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul>
+    {% for message in messages %}
+    <li> <strong> {{ message }} </strong> </li>
+    {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+   </div>
+  <form action= "{{url_for('editBook', bookcategory_id = bookcategory_id, id=item.id)}}" method = 'POST'>
+  <p>Name:</p>
+  <input type = 'text' size='30' name = 'name' placeholder = '{{item.name}}'>
+  <p>Author:</p>
+  <input type = 'text' size='30' name = 'author' placeholder = '{{item.author}}'>
+  <p>Description:</p>
+  <input type = 'text' size='30' name = 'description' placeholder = '{{item.description}}'>
+  <p>Reviews: </p>
+  <input  type = 'text' size= '30' name = 'reviews' placeholder = '{{item.reviews}}'>
+  <p><input type = 'submit' value = 'Edit'> </p>
+  <p> <a href="{{url_for('cataloghome',bookcategory_id=bookcategory_id)}}">Cancel</a>
+  </form>
+  {% endblock body%}
