--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-		{% block header %}  {% endblock header%}
-	</head>
-	<title>{% block title %} {% endblock title %}</title>
-
-	<body>
-		<h1> Saif's Book Catalog </h1>
-		  {% block body %}
-		  
-
-		  {% endblock body %}
-	</body>
-</html>
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+	{% block header %}  {% endblock header%}
+  </head>
+  <title>{% block title %} {% endblock title %}
+  </title>
+  <body>
+    <h1> Saif's Book Catalog </h1>
+	<div class = 'header'>
+	  <form action ="{{url_for('showLogin')}}">
+	  <input type = "submit" value = "LOGIN">
+	  </form>
+	  <form action ="{{url_for('gdisconnect')}}">
+	  <input type = "submit" value = "LOGOUT">
+	  </form>
+	</div>
+    {% block body %}
+    {% endblock body %}
+	
