--- a/templates/newbook.html
+++ b/templates/newbook.html
@@ -1,54 +1,20 @@
-<html>
-<head>
-	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-</head>
-<body>
+{% extends "layout.html" %}
+{% block title %} Adding a new book {% endblock title %}
+{% block body%}
 <h3> Adding a New Book </h3>
-
 <form action="{{url_for('newBook',bookcategory_id=bookcategory_id)}}" method='POST'>
-
-	Name: 
-
-	<input type = 'text' size = '30' name = 'name'>
-
-	</br>
-
-	Author: 
-
-	<input type = 'text'  size = '30' name = 'author'>
-
-	</br>
-
-	Description: 
-
-	<input type = 'text'  size = '30'  name = 'description'>
-
-	</br>
-
-	Reviews: 
-
-	<input type = 'text' size = '30' name = 'reviews'>
-
-	</br>
-
-
-
-
-    <input type='submit'  value = 'Create'>
-
+  Name: 
+<input type = 'text' size = '30' name = 'name'>
+  </br>
+  Author: 
+<input type = 'text'  size = '30' name = 'author'>
+  </br>
+  Description: 
+<input type = 'text'  size = '30'  name = 'description'>
+  </br>
+  Reviews: 
+<input type = 'text' size = '30' name = 'reviews'>
+</br>
+<input type='submit'  value = 'Create'>
 </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
+{% endblock body%}
