--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,16 @@
-{% extends "layout.html" %}
+{% extends "layout2.html" %}
 {% block title %} Sign-in {% endblock title %}
 	{% block header %}
 	<!-- LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
 	<script src = "//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
 	</script>
-
 	<script src="//apis.google.com/js/platform.js?onload=start">
 	</script>
-	
 	{% endblock header %}
 	<!-- END PRE-REQUISITES FOR GOOGLE SIGN-IN -->
-
 	<body>
 	{% block body %}
-
 	<div class = "pane">
-	
 	<!-- GOOGLE PLUS SIGN-IN BUTTON -->
 	<div id="signInButton">
           <span class="g-signin"
@@ -32,11 +27,8 @@
         <script>
         function signInCallback(authResult) {
         	if (authResult['code'])  {
-
-
         		// Hide the sign-in button now that the user is authorized
         		$('#signinButton').attr('style','display: none');
-
         		// Send the one-time-use code to the server, if the server responds, write a 'loginsuccessful' message to the web page and then redirect//
         		$.ajax({
         			type: 'POST' ,
@@ -51,23 +43,16 @@
         				setTimeout(function() {
         					window.location.href   = "/cataloghome";
         				}, 4000);
-
         			} else if (authResult['error']) {
         		console.log('There was an error: ' + authResult['error']);
         	} else {
         		$('#result').html('Failed to make a server-side call. Check your configuration and console.');
         	}
-
    	}
-      
   	}); } }
-
         </script>
-        
-
     <!--END GOOGLE PLUS SIGN IN BUTTON -->
     </div>
     {% endblock body %}
-
 </body>
 </html>
