--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,18 +6,27 @@
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 	{% block header %}  {% endblock header%}
   </head>
-  <title>{% block title %} {% endblock title %}
-  </title>
+
+
+  <title>{% block title %} {% endblock title %}</title>
+
   <body>
-    <h1> Saif's Book Catalog </h1>
-	<div class = 'header'>
+
+  <h1> Saif's Book Catalog </h1>
+
+  <div class = 'header'>
+    {% if 'username' not in session %}
 	  <form action ="{{url_for('showLogin')}}">
 	  <input type = "submit" value = "LOGIN">
 	  </form>
+	{% else %}
 	  <form action ="{{url_for('gdisconnect')}}">
 	  <input type = "submit" value = "LOGOUT">
 	  </form>
-	</div>
-    {% block body %}
-    {% endblock body %}
+	{% endif %}
+  </div>
+
+    {% block body %} {% endblock body %}
+	
+
 	
