Edited homepage to create Book adding functionality

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
    <div class="col-md-1">
    </div>
    <div class="col-md-10 category-list">
-	  <h3>{{i.name}}</h3>
+	  <h3>{{i.name}}</h3><ul><a href ='{{url_for('newBook',bookcategory_id=i.id)}}'> 	Add a New Book in this category  </a></ul>
    </div>
    <div class="col-md-1"></div>
    </a>
