Solved the errors in book editing function

--- a/templates/editbook.html
+++ b/templates/editbook.html
@@ -13,7 +13,8 @@
     {% endif %}
     {% endwith %}
    </div>
-  <form action= "{{url_for('editBook', bookcategory_id = bookcategory_id, id=item.id)}}" method = 'POST'>
+  <form action= "{{url_for('editBook', bookcategory_id = item.bookcategory_id, id=item.id)}}"
+   method = 'post'>
   <p>Name:</p>
   <input type = 'text' size='30' name = 'name' placeholder = '{{item.name}}'>
   <p>Author:</p>
@@ -23,6 +24,6 @@
   <p>Reviews: </p>
   <input  type = 'text' size= '30' name = 'reviews' placeholder = '{{item.reviews}}'>
   <p><input type = 'submit' value = 'Edit'> </p>
-  <p> <a href="{{url_for('cataloghome',bookcategory_id=bookcategory_id)}}">Cancel</a>
+  <p> <a href="{{url_for('cataloghome',bookcategory_id=item.bookcategory_id)}}">Cancel</a>
   </form>
   {% endblock body%}
